centralized home page and fixed overflowing hand

--- a/pages/Hand.module.css
+++ b/pages/Hand.module.css
@@ -1,8 +1,7 @@
 .hand {
-  /* opacity: 0; */
   margin: 0;
-  bottom: 0;
-  right: 0;
+  bottom: -10px;
+  right: -1rem;
   transform: rotate(325deg);
   animation: fadein 2s ease-in, hand 2s forwards 0s infinite alternate;
   will-change: transform;
